[package]
name = "rcli"
version = "0.1.0"
authors = ["Yifan Liu"]
edition = "2021"

[dependencies]
anyhow = "1.0.87"
base64 = "0.22.1"
clap = { version = "4.5.17", features = ["derive"] }
csv = "1.3.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
toml = "0.8.19"
